feat: 完善项目功能与配置优化
- 添加敏感数据模板控制器
- 完善统一审计服务
- 优化水印任务与提取引擎
- 增强区块链服务与验证
- 优化加密服务密钥管理
- 完善网关控制与限流配置
- 增强MPC安全聚合服务
- 完善监控告警与健康检查
- 优化数据血缘与质量服务
- 清理冗余代码与配置文件

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>